--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -9,7 +9,17 @@
   --font-weight-600: #{$font-weight-600};
   --font-weight-800: #{$font-weight-800};
   --shadow: #{$shadow};
+  --color-primary: var(--dark-900);
+  --color-background: var(--gray-light);
+  --color-background-secondary: var(--white);
 }
+
+[data-theme="dark"] {
+  --color-primary: var(--white);
+  --color-background:var(--blue-dark-500);
+  --color-background-secondary: var(--blue-dark);
+}
+
 
 html,
 body {
@@ -18,6 +28,10 @@ body {
   font-family: 'Nunito Sans', sans-serif, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
   Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue;
   font-size: $font-size-body;
+
+  background-color: var(--color-background);
+  color: var(--color-primary);
+  transition: background-color 0.4s;
 }
 
 input {
@@ -164,24 +178,3 @@ h1, h2, h3, h4, h5, h6 {
   text-overflow: ellipsis " [..]";
 }
 
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: var(--white);
-    background: var(--blue-dark-500);
-  }
-
-}
-
-@media (prefers-color-scheme: light) {
-  html {
-    color-scheme: light;
-  }
-  body {
-    color: var(--dark-900);
-    background: var(--gray-light);
-  }
-}
