--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -87,6 +87,10 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
 }
 
+.d-grid {
+  display: grid;
+}
+
 .justify-center {
   justify-content: center;
 }
