--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -1,4 +1,5 @@
 $breakpoints-mobile: 375px;
+$breakpoints-tablet: 1024px;
 $breakpoints-desktop: 1440px;
 $width-container-desktop: 1090px;
 $width-container-mobile: 310px;
